--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
 <body data-type="book" id="top">
 
- 
+  
+
   <div class="w3-main w3-large" style="margin-left:250px;">
 
 
@@ -63,11 +64,14 @@
 
         <a class="w3-bar-item w3-button w3-hide-large w3-large w3-center" href="javascript:void(0)" onclick="w3_close()">Close <i class="fa-solid fa-xmark w3-large"></i></a>
 
-        <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and the
-                Geometry of Space</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="vectors-and-the-geometry-of-space.html">1. Vectors and
+            the
+            Geometry of Space</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="partial-derivatives.html">2. Partial Derivatives</a>
-        <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order Derivatives</a>
-        <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued Functions</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="higher-order-derivatives.html">3. Higher Order
+            Derivatives</a>
+        <a class="w3-bar-item w3-button" id="chapterBar" href="vector-valued-functions.html">4. Vector-Valued
+            Functions</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="double-and-triple-integrals.html">5. Double and Triple
             Integrals</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="applications-of-integration.html">6. Applications of
@@ -77,19 +81,18 @@
             and Surfaces</a>
         <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
-        <br>
+        <!-- Support button -->
+<br>
 
+<span class="w3-center w3-large" style="width: 80%; display: block; margin: 0 auto;">
+  <hr>
+</span>
 
-        <div class="w3-container w3-center w3-theme" id="mySocial">
-            <div class="">
-                <a title="Patreon" href="https://www.patreon.com/jcponce" target="_blank"><i class="fa-brands fa-patreon w3-button w3-round-large w3-theme"></i></a>
-                <span title="Support" onclick="document.getElementById('myModal').style.display='block'" class="w3-button w3-round-large w3-theme">
-                    <i class="fa-regular fa-heart"></i></span>
-                <a title="GitHub" href="https://github.com/jcponce" target="_blank"><i class="fa-brands fa-github w3-button w3-round-large w3-theme"></i></a>
-                <br>
-            </div>
-        </div>
-
+<span style="width: 55%; display: block; margin: 0 auto;" onclick="document.getElementById('myModal').style.display='block'" class="w3-bar-item w3-button w3-round-large w3-center w3-large">
+  <i class="fa-regular fa-heart"></i> <strong>Support</strong>
+  <br>
+  <strong>∞</strong>
+</span>
     </nav>
 
     <!-- Overlay to close navbar -->
@@ -195,35 +198,49 @@
 
 
             <ol>
-                <li><a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
-                <li><a href="partial-derivatives.html">Partial Derivatives</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
-                <li><a href="higher-order-derivatives.html">Higher Order Derivatives</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
-                <li><a href="vector-valued-functions.html">Vector-Valued Functions</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
-                <li><a href="double-and-triple-integrals.html">Double and Triple Integrals</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
-                <li><a href="applications-of-integration.html">Applications of Integration</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
+                <li><a href="vectors-and-the-geometry-of-space.html">Vectors and the Geometry of Space</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
+                <li><a href="partial-derivatives.html">Partial Derivatives</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
+                <li><a href="higher-order-derivatives.html">Higher Order Derivatives</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
+                <li><a href="vector-valued-functions.html">Vector-Valued Functions</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
+                <li><a href="double-and-triple-integrals.html">Double and Triple Integrals</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
+                <li><a href="applications-of-integration.html">Applications of Integration</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
                 <li><a href="integrals-over-paths-and-surfaces.html">Integrals Over Paths and Surfaces</a></li>
-                <li><a href="integration-theorems.html">Integration Theorems</a><picture>
-                    <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
-                    <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
-                  </picture></li>
+                <li><a href="integration-theorems.html">Integration Theorems</a>
+                    <picture>
+                        <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.webp" type="image/webp">
+                        <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f6a7/512.gif" alt="🚧" width="28" height="28">
+                    </picture>
+                </li>
             </ol>
 
 
@@ -316,7 +333,7 @@
 </section>
     </div>
 
-  
+    
     <br />
 
     <!-- Footer -->
