--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -96,19 +96,18 @@
 
     <a class="w3-bar-item w3-button" id="chapterBar" href="integration-theorems.html">8. Integration Theorems</a>
 
-    <br>
+    <!-- Support button -->
+<br>
 
+<span class="w3-center w3-large" style="width: 80%; display: block; margin: 0 auto;">
+  <hr>
+</span>
 
-    <div class="w3-container w3-center w3-theme" id="mySocial">
-      <div class="">
-        <a title="Patreon" href="https://www.patreon.com/jcponce" target="_blank"><i class="fa-brands fa-patreon w3-button w3-round-large w3-theme"></i></a>
-        <span title="Support" onclick="document.getElementById('myModal').style.display='block'" class="w3-button w3-round-large w3-theme">
-          <i class="fa-regular fa-heart"></i></span>
-        <a title="GitHub" href="https://github.com/jcponce" target="_blank"><i class="fa-brands fa-github w3-button w3-round-large w3-theme"></i></a>
-        <br>
-      </div>
-    </div>
-
+<span style="width: 55%; display: block; margin: 0 auto;" onclick="document.getElementById('myModal').style.display='block'" class="w3-bar-item w3-button w3-round-large w3-center w3-large">
+  <i class="fa-regular fa-heart"></i> <strong>Support</strong>
+  <br>
+  <strong>∞</strong>
+</span>
   </nav>
 
   <!-- Overlay to close navbar -->
