--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -261,7 +261,7 @@
       </p>
 
       <p>
-        Suppose that image of $\c$ represents a wire. If $f(x,y,z)$ represents
+        Suppose that the image of $\c$ represents a wire. If $f(x,y,z)$ represents
         the mass density at $(x,y,z),$ then the integral of $f$ will be the total
         mass of the wire.
         On the other hand, if $f(x,y,z)$ indicates temperature, then the integral of $f$
@@ -302,7 +302,7 @@
 
       <div class="example">
         We wish to compute the total area of the "fence" in the path
-        $\c(t) = \cos t~\i +\sin t ~\j,$ with $t\in [0,\pi].$ The height of
+        $\c(t) = \big( \cos t, \sin t \big)$ with $t\in [0,\pi].$ The height of
         the fence is $f(x,y) =2 + x^2 y.$
         First we compute
         <div class="eqwrapper">
@@ -352,15 +352,14 @@
 
       <p>
         Now consider a force field $\F(x,y)$ and a piecewiese
-        continuous smooth curve $C,$ parametrized by
-        the path $\c:[a,b]\to \R^3.$
+        continuous smooth curve $C.$
         We wish to compute the work done by
         this force in moving a particle along this
         smooth curve $C.$
       </p>
 
       <figure>
-        <img style="width: 70%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-1.gif">
+        <img style="width:55%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-1.gif">
         <figcaption>
           The particle moving along $C$ is affected by the
           vector field.
@@ -382,9 +381,9 @@
       </p>
 
       <figure>
-        <img style="width: 70%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-5.svg">
+        <img style="width:55%;  display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-5.svg">
         <figcaption>
-          Tangent vector.
+          A partition of the curve $C.$ Tangent vector.
         </figcaption>
       </figure>
 
@@ -425,14 +424,14 @@
       </p>
 
       <figure>
-        <img style="width: 70%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-9.gif">
+        <img style="width: 55%; display: block;" src="https://www.dynamicmath.xyz/math2001/images/chapter-35/chapter-35-work-9.gif">
         <figcaption>
           Particle moving along $C$ affected by the force field.
         </figcaption>
       </figure>
 
       <p>
-        If the smoorth curve $C$ is given by the parametrization $\c(t) = x(t)~\i+y(t)~\j,$
+        If the smooth curve $C$ is given by the parametrization $\c(t) = \big( x(t), y(t)\big),$
         then $\T(t) = \c'(t)/\norm{\c'(t)}.$ So we can write
       </p>
       <div class="eqwrapper">
@@ -442,7 +441,7 @@
         \end{eqnarray*}
       </div>
       <p>
-        This intetral is often abbreviated as $\int_{\c}\F\pd d\s.$
+        This integral is often abbreviated as $\int_{\c}\F\pd d\s.$
         The previous discussion of work in two dimensions motivates
         the following definition.
       </p>
@@ -505,8 +504,8 @@
         \]
         where $F_1,$ $F_2$ and $F_3$ are the components of the vector field $\F.$
         The expression $F_1~dx+ F_2~dy + F_3~dz$ is called a <strong>differential form</strong>.
-        By definition, the integral of a differential form along a path
-        $\c(t) = x(t)~\i+y(t)~\j+z(t)~\k$ is
+        The integral of a differential form along a path
+        $\c(t) = \big( x(t), y(t), z(t)\big )$ is defined as
       </p>
       <div class="eqwrapper">
         \begin{eqnarray*}
@@ -522,31 +521,6 @@
       </p>
 
       <p>
-        It is also common to write $\int_{\c} \F \pd d\s$ using the notation
-        \[
-        \int_C \F \pd d\r.
-        \]
-        The main reason is that we can think of describing a $C^1$ path $\c$
-        in terms of a moving <strong>position vector</strong> based at the
-        origin and ending at the point $\c(t)$ at time $t.$ Postion vectors are ofter
-        denoted by
-        \[
-        \r = x~\j+y~\j+z~\k,
-        \]
-        and so the curve $C$ is described using the notation
-        \[
-        \r(t) = x(t)~\j+y(t)~\j+z(t)~\k
-        \]
-        instead of $\c(t).$ By definition, the line integral is then given by
-        \[
-        \int_a^b \F \big(\r(t)\big)\pd \frac{d\r}{dt}dt.
-        \]
-        By canceling the $dt$'s, and using the parametrization independence to replace
-        the limits of integration with the geometric curve $C,$ we obtain the notation
-        $\int_C \F \pd d\r.$
-      </p>
-
-      <p>
         Now, to compute a line integral in any particular case, we can
         use the original definition, integrate the tangencial component of
         $\F$ along $\c,$ or use the differential form,
@@ -557,8 +531,6 @@
         $\F\big(\c(t)\big)$ by simply putting $x = x(t),$ $y=y(t),$ and
         $z=z(t)$ in the expression $\F(x,y,z).$
       </p>
-
-
 
       <div class="example">
         Let $c(t) = \left(\sin t, \cos t , t\right)$ with $t\in [-, 2\pi],$ and
@@ -723,14 +695,30 @@
       <p>
         Every simple curve $C$ has two orientations or
         directions associated with it.
-        If $P_1$ and $P_2$ are the endpoints of the curve,
+        If $\c(a)$ and $\c(b)$ are the endpoints of the curve,
         then we can consider
         $C$ as directed either from
-        $P_1$ to $P_2$ or from $P_2$ to $P_1.$
+        $\c(a)$ to $\c(b)$ or from $\c(b)$ to $\c(a).$
         The simple curve $C$ together with a sense of direction
         is called an <strong>oriented simple curve</strong> or
         <strong>directed simple curve</strong>.
       </p>
+
+      <div class="figure-container">
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/simple-curve-orientation-ab.gif">
+          <figcaption>
+            Oriented curve from  $\c(a)$ to $\c(b).$
+          </figcaption>
+        </figure>
+
+        <figure>
+          <img style="width:100%" src="imgs/integrals-over-paths-and-surfaces/simple-curve-orientation-ba.gif">
+          <figcaption>
+            Oriented curve from  $\c(b)$ to $\c(a).$
+          </figcaption>
+        </figure>
+      </div>
 
 
       <p>
@@ -774,6 +762,95 @@
         \end{eqnarray*}
         where $\c$ is any orientatio-reserving parametrization of $C.$
       </div>
+
+      <p>
+        If $-C$ is the same curve as $C,$ but with opposite orientation, then
+        \[
+        \int_C \F\pd d\s = - \int_{-C} \F \pd d\s.
+        \]
+        Now, if $C$ is an oriented $C$ curve that is made up of several 
+        oriented component curves $C_i$ for $i=1,2,\ldots,k,$ then we write 
+        $C=C_1+ C_2+\cdots + C_k.$ Thus 
+      </p>
+      <div class="eqwrapper">
+        \[
+        \int_C \F \pd d\s = \int_{C_1}\F \pd d\s+ \int_{C_2}\F \pd d\s+\cdots +  \int_{C_k}\F \pd d\s.
+        \]
+      </div>
+      <p>
+        The previous formula provides a convenient way to evaluate $\int_C \F \pd d\s,$ since 
+        sometimes it is easier to parametrize the componentes $C_i$ individually thant 
+        to parametrize $C$ as a whole.
+      </p>
+
+      <h3>The Notation $d\r$</h3>
+
+      <p>
+        It is also common to write $\int_{C} \F \pd d\s$ using the notation
+        \[
+        \int_C \F \pd d\r.
+        \]
+        The main reason is that we can think of describing a $C^1$ path $\c$
+        in terms of a moving <strong>position vector</strong> based at the
+        origin and ending at the point $\c(t)$ at time $t.$ Postion vectors are ofter
+        denoted by
+        \[
+        \r = x~\j+y~\j+z~\k,
+        \]
+        and so the curve $C$ is described using the notation
+        \[
+        \r(t) = x(t)~\j+y(t)~\j+z(t)~\k
+        \]
+        instead of $\c(t).$ By definition, the line integral is then given by
+        \[
+        \int_a^b \F \big(\r(t)\big)\pd \frac{d\r}{dt}dt.
+        \]
+        By canceling the $dt$'s, and using the parametrization independence to replace
+        the limits of integration with the geometric curve $C,$ we obtain the notation
+        $\int_C \F \pd d\r.$
+      </p>
+
+      <div class="exercise">
+        Evaluate the line integral 
+        \[
+        \int_C x^2 ~dx + xy ~dy,
+        \]
+        where $C$ is the perimeter of the unit square in $\R^2,$ oriented in the 
+        counterclockwise sense.
+
+        
+        <img style="width: 40%;display: block;margin-left: auto;margin-right: auto; margin-top: 10px;" src="imgs/integrals-over-paths-and-surfaces/unit-circle.svg">
+
+        <br>
+
+        <details>
+          <summary>
+            Show me a hint!
+          </summary>
+
+          <p>
+            Use the parametrization $\c:[0,4]\to \R^2$ defined as
+            \[
+            \c(t) = 
+            \left\{
+              \begin{array}{ll}
+              (t, 0), &amp; t\in [0,1],\\
+              (1, t-1), &amp; t\in [1,2],\\
+              (3-t, 1), &amp; t\in [2,3],\\
+              (0, 4-t), &amp; t\in [3,4],\\
+              \end{array}
+            \right.
+            \]
+            You should get $\frac{1}{2}.$ 
+            Try to evaluate the integral considering $C$ as 
+            $C_1+C_2+C_3+C_4,$ where $C_i$ are oriented curves. 
+            It should be easier to define each $C_i.$
+          </p>
+
+        </details>
+
+      </div>
+
 
 
     </div>
@@ -916,7 +993,7 @@
       </p>
 
       <figure>
-        <img style="width:100%" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-general.png">
+        <img style="width:100%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-general.png">
 
         <figcaption>
           The region $D$ is mapped to the surface $S.$
@@ -976,7 +1053,7 @@
 
 
       <figure>
-        <img style="width:60%" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-surf-02.png">
+        <img style="width:55%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-surf-02.png">
 
         <figcaption>
           The torus is not the graph of a function of the form $z=f(x,y).$
@@ -1039,7 +1116,7 @@
       </p>
 
       <figure>
-        <img style="width:60%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-cartesian.png">
+        <img style="width:55%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-cartesian.png">
         <figcaption>
           Semi-spheres defined by $z= \pm \sqrt{2^2-x^2-y^2}.$ <a target="_blank" href="https://www.math3d.org/ip8gC9avC"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
@@ -1052,7 +1129,7 @@
       </p>
 
       <figure>
-        <img style="width:60%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-parametric.png">
+        <img style="width:55%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/sphere-parametric.png">
         <figcaption>
           The sphere using a parametrization <a target="_blank" href="https://www.math3d.org/FeAjbY5pU"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
