--- a/integrals-over-paths-and-surfaces.html
+++ b/integrals-over-paths-and-surfaces.html
@@ -1063,7 +1063,7 @@
 
 
       <figure>
-        <img style="width:55%;" src="https://www.dynamicmath.xyz/math2001/images/chapter-40/par-surf-02.png">
+        <img style="width:60%;" src="imgs/integrals-over-paths-and-surfaces/torus.jpg">
 
         <figcaption>
           The torus is not the graph of a function of the form $z=f(x,y).$
@@ -1432,10 +1432,12 @@
         is also normal to the tangent plane
         at the point $P=(x(a,b),y(a,b),z(a,b)).$
         The equation of the tangent plane at $P$ is given by
+      </p>
+      <div class="eqwrapper">
         \[
         \big(\r_u(a,b)\times\r_v(a,b)\big)\cdot \big((x~\i+y~\j+z~\k) - \r(a,b)\big)=0.
         \]
-      </p>
+      </div>
 
       <div class="example">
         Let's find the tangent plane to the surface parametrized by
@@ -1467,15 +1469,15 @@
           \end{eqnarray*}
         </div>
         <p>
-          Now the point $P=(1,1,3) $ corresponds to $u=1,v=1,$
-          since $u^2=1, ~v^2=1,~u+2v=3;$
+          Now the point $P=(1,1,3) $ corresponds to $u=1,$ $v=1,$
+          since $u^2=1,$ $v^2=1, $u+2v=3;$
           and
           \[
           \r_u\times \r_v\big|_{(1,1)} =-2~\i-4~\j+4~\k .
           \]
           Using the equation of the tangent plane
         </p>
-        <div>
+        <div class="eqwrapper">
           \[
           \bigg(\r_u\times \r_v\big|_{(1,1)} \bigg)\cdot \big((x~\i+y~\j+z~\k) -( \i+\j+3~\k)\big)=0,
           \]
@@ -1509,14 +1511,16 @@
       <div class="exercise">
         Use a 3D plotter to explore the surfaces given by the following parametrizations:
 
-        <ul>
-          <li>$\r(u,v) = \big(u-v,u+v, 2uv\big)$</li>
-          <li>$\r(u,v) = \big(2\sqrt{1+u^2}\cos v, 2\sqrt{1+u^2}\sin v, u\big)$</li>
-          <li>$\r(u,v) = \big(u^2-v^2,u^2+v^2, v\big)$</li>
-          <li>$\r(u,v) = \big(3\cos u \sin v, 2\sin u \sin v, \cos v\big)$</li>
-          <li>$\r(u,v) = \big(u,v,u^2\big)$</li>
-          <li>$\r(u,v) = \big(u \cos v, u \sin v, u\big)$</li>
-        </ul>
+        <div class="eqwrapper">
+          <ul>
+            <li>$\r(u,v) = \big(u-v,u+v, 2uv\big)$</li>
+            <li>$\r(u,v) = \big(2\sqrt{1+u^2}\cos v, 2\sqrt{1+u^2}\sin v, u\big)$</li>
+            <li>$\r(u,v) = \big(u^2-v^2,u^2+v^2, v\big)$</li>
+            <li>$\r(u,v) = \big(3\cos u \sin v, 2\sin u \sin v, \cos v\big)$</li>
+            <li>$\r(u,v) = \big(u,v,u^2\big)$</li>
+            <li>$\r(u,v) = \big(u \cos v, u \sin v, u\big)$</li>
+          </ul>
+        </div>
 
         <p>
           Are they all smooth surfaces?
@@ -1699,10 +1703,12 @@
         <p>
           Since $||\r_x\times\r_y||=\sqrt{4x^2+4y^2+1},$
           then
+        </p>
+        <div class="eqwrapper">
           \[
           dS = ||\r_x\times\r_y|| ~dx~dy = \sqrt{4x^2+4y^2+1}~dx~dy.
           \]
-        </p>
+        </div>
         <p>
           Hence
         </p>
@@ -1755,14 +1761,15 @@
         where the surface lies entirely in the $xy$-plane.
       </p>
 
-      For example, if a thin sheet has the shape of a surface $S$ and the mass density at the
-      point $(x, y, z)$ is $\rho(x, y, z),$
-      then the mass of the sheet is given by a surface
-      integral:
-      \[
-      \text{mass of sheet} = \iint_D \rho (x,y,z)~dS.
-      \]
-      <p></p>
+      <p>
+        For example, if a thin sheet has the shape of a surface $S$ and the mass density at the
+        point $(x, y, z)$ is $\rho(x, y, z),$
+        then the mass of the sheet is given by a surface
+        integral:
+        \[
+        \text{mass of sheet} = \iint_D \rho (x,y,z)~dS.
+        \]
+      </p>
 
       <p>
         Another application is in calculating the average
@@ -1771,10 +1778,12 @@
         smooth surface in $\R^3.$
         Then the average value of
         the function $f(x,y,z)$ over that surface is given by
+      </p>
+      <div class="eqwrapper">
         \[
         \text{average value over surface} = \frac{1}{\text{area of } S}\iint_S f (x,y,z)~dS.
         \]
-      </p>
+      </div>
 
       <p>
         If the surface $S$ is a closed surface, it is convention to write
@@ -1974,6 +1983,9 @@
 
       </div>
 
+      <br>
+      <hr>
+
 
 
     </div>
@@ -2042,7 +2054,7 @@
       </p>
 
       <figure>
-        <img style="width: 60%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg0egUmGwI6tB4-YgBwBf0_Z8eswarFkIaMWniXrno45MG_km184ApTcSH8XTm4T11Yy-tbxT6JwR81rgO-012yeU1GwtZ1J32eQisejc_yjY6hk4pl3x-RXcd9rYzBBLmhyphenhyphenCgeoLt4HL1otXgQ7FaDOHAk7dkGv6rwC4avNgnLsR2KkMs/s1600/mobius-big.gif">
+        <img loading="lazy" style="width: 60%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEg0egUmGwI6tB4-YgBwBf0_Z8eswarFkIaMWniXrno45MG_km184ApTcSH8XTm4T11Yy-tbxT6JwR81rgO-012yeU1GwtZ1J32eQisejc_yjY6hk4pl3x-RXcd9rYzBBLmhyphenhyphenCgeoLt4HL1otXgQ7FaDOHAk7dkGv6rwC4avNgnLsR2KkMs/s1600/mobius-big.gif">
 
         <figcaption>
           Möbius strip. Observe the position of the normal vectors defined on the
@@ -2055,7 +2067,7 @@
       </p>
 
       <figure>
-        <img style="width: 60%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNFQEFXJKBDTM74DOD_az_we0o_qq-YtTnXZj7FbwCzp8mIzVWwUlnJ4inqoqvGP_A2SV60nT13wYNrtAg4LKagaW4ddJEYSoVzLilmd27CwijPUBPqZvIp_L7yLqsonwmtefOaBy8-p06DvytMNLiSgHNYd8MlLtmwxBVktEdzruSdOs/s1600/klein-mobius.gif">
+        <img loading="lazy" style="width: 60%;" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiNFQEFXJKBDTM74DOD_az_we0o_qq-YtTnXZj7FbwCzp8mIzVWwUlnJ4inqoqvGP_A2SV60nT13wYNrtAg4LKagaW4ddJEYSoVzLilmd27CwijPUBPqZvIp_L7yLqsonwmtefOaBy8-p06DvytMNLiSgHNYd8MlLtmwxBVktEdzruSdOs/s1600/klein-mobius.gif">
         <figcaption>
           Klein bottle. Notice the Möbius strip. <a href="https://www.geogebra.org/m/hpn4kxj2" target="_blank"><i class="fa fa-external-link-alt"></i></a>
         </figcaption>
@@ -2158,9 +2170,11 @@
           to be $S,$ it can be seen from the diagram below
           that the flux (volume per unit time if $\v$ is
           velocity) passing through the parallelogram is
-          \[
-          \text{flux across parallelogram } \approx \v \pd \n~ \Delta S
-          \]
+          <div class="eqwrapper">
+            \[
+            \text{flux across parallelogram } \approx \v \pd \n~ \Delta S
+            \]
+          </div>
 
           <img class="fragment" style="
                       width: 55%;
@@ -2173,10 +2187,14 @@
           $\n = \frac{\mathbf a \times \mathbf b}{||\mathbf a \times \mathbf b||},$
           and the area of the parallelogram is $||\mathbf a \times \mathbf b||\approx \Delta S.$
           Then we have
-          \[
-          \text{flux across parallelogram } \approx \v \pd\frac{\mathbf a \times \mathbf b}{||\mathbf a \times \mathbf
-          b||} ||\mathbf a \times \mathbf b|| = \v \pd (\mathbf a \times \mathbf b)
-          \]
+          <div class="eqwrapper">
+            \[
+            \text{flux across parallelogram } \approx \v \pd\frac{\mathbf a \times \mathbf b}{||\mathbf a \times \mathbf
+            b||} ||\mathbf a \times \mathbf b|| = \v \pd (\mathbf a \times \mathbf b)
+            \]
+          </div>
+
+
           <img class="fragment" style="
             width: 55%;
             display: block;
@@ -2184,12 +2202,16 @@
             margin-right: auto;
           " src="https://www.dynamicmath.xyz/math2001/images/chapter-43/chapter-043-2a7.png">
 
-          ined by the two vectors
+          As shown previously, a patch of surface can be approximated
+          by a parallelogram determined by the two vectors
           $\r_u\Delta u$ and $\r_v\Delta v.$
           Hence we have
-          \[
-          \text{flux across one patch} \approx \v \pd \n ~\Delta S = \v \pd (\r_u\times \r_v) \Delta u \Delta v
-          \]
+          <div class="eqwrapper">
+            \[
+            \text{flux across one patch} \approx \v \pd \n ~\Delta S = \v \pd (\r_u\times \r_v) \Delta u \Delta v
+            \]
+          </div>
+
 
           Note that we need to check that the vector
           $\r_u\times \r_v$ points in the direction of
@@ -2227,15 +2249,16 @@
           determined by the velocity field $\F(x,y,z)= z~\i+y~\j+x~\k.$
         </p>
 
-        <div style="text-align: center;">
-          <iframe loading="lazy" width="70%" height="500px" scrolling="no" style="border: 1px solid black; overflow: hidden; margin-top: 10px;" src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
-        <br>
-         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey" href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
+        <!--<div style="text-align: center;">
+          <iframe loading="lazy" width="70%" height="500px" scrolling="no"
+        style="border: 1px solid black; overflow: hidden; margin-top: 10px;" 
+        src="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43"></iframe>
+        <br/>
+         <a class="w3-medium w3-button w3-round-xlarge w3-theme w3-hover-grey"
+          href="https://www.dynamicmath.xyz/math2001/sketches/flux-surface-example-43" target="_blank">
           Fullscreen <i class="fas fa-external-link-alt"></i>
           </a>
-        </div>
-
-        <!---->
+        </div>-->
 
         <p>
           To find the net outward flux we need to evaluate the following integral:
@@ -2278,8 +2301,8 @@
           But $\r_z\times\r_{\theta} $ is directed inward! 😥
         </p>
 
-        <p>Actually, there is no problem! 😃 Just take 
-          $\r_{\theta}\times\r_z = \cos \theta ~\i + \sin \theta ~\j,$
+        <p>Actually, there is no problem! 😃 
+          Just take $\r_{\theta}\times\r_z = \cos \theta ~\i + \sin \theta ~\j,$
           which directs outward, with the same direction as $\n_1.$
         </p>
 
